Tried Fixing Spacing on Zoom

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 1400px) {
 	#profile {
-		height: 83vh;
+		height: fit-content;
 		margin-bottom: 6rem;
 	}
 
@@ -68,7 +68,7 @@
 	}
 
 	#profile {
-		height: 83vh;
+		height: fit-content;
 		margin-bottom: 0;
 	}
 
