--- a/style.css
+++ b/style.css
@@ -147,7 +147,6 @@ a:hover {
 /* Sections */
 section {
 	padding-top: 4vh;
-	height: 96vh;
 	margin: 0 10rem;
 	box-sizing: border-box;
 	min-height: fit-content;
@@ -163,7 +162,7 @@ section {
 	display: flex;
 	justify-content: center;
 	gap: 5rem;
-	height: 80vh;
+	height: fit-content;
 }
 
 .section_pic-container {
@@ -218,6 +217,7 @@ section {
 /*ABOUT SECTION*/
 #about {
 	position: relative;
+	height: fit-content;
 }
 
 .about-containers {
@@ -254,11 +254,13 @@ section {
 	border: rgb(53, 53, 53) 0.1rem solid;
 	border-color: rgb(164, 164, 164);
 	text-align: center;
+	justify-content: center;
 }
 
 .section-container {
 	gap: 4rem;
 	height: 80%;
+	justify-content: center;
 }
 
 /* EXPERIENCE SECTION */
@@ -334,7 +336,7 @@ article .icon {
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
-	height: 70vh;
+	height: fit-content;
 }
 
 .contact-info-upper-container {
